# audio-feeder

./: .gitignore  CHANGELOG.rst  LICENSE  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: publish.yml  test.yml
audio_feeder/: __init__.py  __main__.py  __version__.py  app.py  cache_utils.py  cli.py  config.py  database_handler.py  directory_parser.py  html_utils.py  metadata_loader.py  page_generator.py  pages.py  resolver.py  rss_feeds.py
audio_feeder/data/database/: schema.yml
audio_feeder/data/site/css/: main.css
audio_feeder/data/templates/rss/entry_types/Book/: name.tpl
audio_feeder/tests/: test_directory_parser.py  test_html_utils.py  test_rss_feeds.py
audio_rss_server/: __main__.py  __version__.py  config.py  database_handler.py  directory_parser.py  metadata_loader.py  object_handler.py  page_generator.py  schema_handler.py
changelog.d/: add_rendered_feeds.rst  add_test_server.rst  config_dir.rst  font-fix.rst  schema_types.rst  update_installer.rst  update_status.rst  version-in-git.rst  version.rst  zero_index.rst
database/: schema.yml
scripts/: bundle_fa_subset.py  record_responses.py  start_test_server.py  utils.py
site/css/: main.css
src/audio_feeder/: __init__.py  __version__.py  _compat.py  _db_types.py  _object_types.py  _useful_types.py  app.py  cache_utils.py  cli.py  config.py  database_handler.py  directory_parser.py  file_location.py  file_probe.py  hash_utils.py  html_utils.py  m4btools.py  media_renderer.py  metadata_loader.py  object_handler.py  page_generator.py  pages.py  resolver.py  resources.py  rss_feeds.py  schema_handler.py  segmenter.py  sql_database_handler.py  updater.py  yaml_database_handler.py
src/audio_feeder/data/css/: fontawesome-subset.css  main.css
src/audio_feeder/data/database/: schema.yml
src/audio_feeder/data/site/css/: fontawesome-subset.css  main.css
src/audio_feeder/data/templates/entry_types/Book/: author.tpl
src/audio_feeder/data/templates/pages/: list.tpl
src/audio_feeder/data/templates/rss/: rss_feed.tpl
templates/RSS/: RSS_feed.tpl
templates/entry_types/Book/: description.tpl  name.tpl
templates/entry_types/book/: description.tpl  name.tpl
templates/pages/: list.tpl
templates/rss/: rss_feed.tpl
templates/rss/entry_types/Book/: description.tpl
tests/: conftest.py  test_config.py  test_database_handlers.py  test_directory_parser.py  test_file_location.py  test_file_probe.py  test_html_utils.py  test_m4btools.py  test_resolver.py  test_resources.py  test_rss_feeds.py  test_segmenter.py  test_sql_database_handler.py  test_updater.py  utils.py
tests/data/: config.yml  db.sqlite  example_google_books_responses.json
tests/data/db_versions/: db_v0.sqlite
tests/data/example_media/audiobooks/Fiction/Bram Stoker - Dracula/: Chapter 01.mp3.xz  Chapter 02.mp3.xz
tests/data/example_media/audiobooks/Fiction/H G Wells - The Invisible Man/: Cover.jpg.xz  invisibleman_01_wells_64kb.mp3.xz  invisibleman_02_wells_64kb.mp3.xz  invisibleman_03_wells_64kb.mp3.xz  invisibleman_04_wells_64kb.mp3.xz  invisibleman_05_wells_64kb.mp3.xz  invisibleman_06_wells_64kb.mp3.xz  invisibleman_07_wells_64kb.mp3.xz  invisibleman_08_wells_64kb.mp3.xz  invisibleman_09_wells_64kb.mp3.xz  invisibleman_10_wells_64kb.mp3.xz  invisibleman_11_wells_64kb.mp3.xz
tests/data/example_media/audiobooks/Fiction/Louisa May Alcott - [Little Women 01] - Little Women/: Little Women-Part00.mp3.xz  Little Women-Part01.mp3.xz  Little Women-Part02.mp3.xz  Little Women-Part03.mp3.xz  Little Women-Part04.mp3.xz
tests/data/example_media/audiobooks/Fiction/Louisa May Alcott - [Little Women 02] - Little Men/: Little Men-Part00.mp3.xz  Little Men-Part01.mp3.xz  Little Men-Part02.mp3.xz
tests/data/example_media/audiobooks/Fiction/Mary Shelley - Frankenstein/: Mary Shelley's Frankenstein.m4b  Mary Shelley's Frankenstein.m4b.xz  frankenstein_ffmetadata.txt
tests/data/example_media/audiobooks/Nonfiction/Charles Y M Kelvin - How to Decode CMYK Images/: Part0.mp3.xz
tests/data/example_media/audiobooks/Nonfiction/Edith Wharton - The Writing of Fiction/: The Writing of Fiction.mp3.xz
tests/data/example_media/audiobooks/Nonfiction/Thomas de Quincey - Confessions of an English Opium Eater/: ConfessionsOfAnEnglishOpiumEater_librivox.m4b.xz
tests/data/yaml_db/: authors.yml  books.yml  entries.yml  series.yml
